Crash on selection after recent BVH changes #55015

Closed
opened 2018-05-09 15:18:08 +02:00 by Dalai Felinto · 4 comments

Blender Version
Broken: d1cd872fef
Worked: d1cd872fef09~ (with leaks though)

Short description of error
Crash when selecting objects.

Exact steps for others to reproduce the error
Open this file and try to place the 3d cursor on the plane (LMB on it):
bvh.blend

ASAN catches: SUMMARY: AddressSanitizer: SEGV /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/bvhutils.c:1478 in bvhcache_find
Full backtrace: P678

**Blender Version** Broken: d1cd872fef09 Worked: d1cd872fef09~ (with leaks though) **Short description of error** Crash when selecting objects. **Exact steps for others to reproduce the error** Open this file and try to place the 3d cursor on the plane (LMB on it): [bvh.blend](https://archive.blender.org/developer/F3313457/bvh.blend) ASAN catches: `SUMMARY: AddressSanitizer: SEGV /home/dfelinto/src/blender/blender/source/blender/blenkernel/intern/bvhutils.c:1478 in bvhcache_find` Full backtrace: [P678](https://archive.blender.org/developer/P678.txt)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Germano Cavalcante was assigned by Dalai Felinto 2018-05-09 15:18:25 +02:00
Author
Owner

How to reproduce from scratch:

  • Add a plane to the initial file
  • Save and re-open the file
  • Click in the cube
How to reproduce from scratch: * Add a plane to the initial file * Save and re-open the file * Click in the cube

This issue was referenced by 828a3d89b3

This issue was referenced by 828a3d89b39b49a265a4ba7875dcb3edfe9c477f
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55015
No description provided.