Fix T55015: Crash on selection after recent BVH changes

Runtime data should always be initialized to NULL on read-time.